agregando boton help front-end

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
               <a class="menu-links" href="#">Documentation</a>
     
               <a class="menu-links" id="btnLogin" href="#">Log in</a>
+              <a class="menu-links" id="btnLogin" href="#">Help</a>
+
           </dir>
         </div>
       </header>
