Ajuste responsive y agregacion del menu toggle

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          <meta name="viewport" content="width=device-width,user-scalable=no">
     </head>
     <body class="cuerpo">
-
+      <div class="alert">404</div>
       <header>
         <div id="menu-fixed" class="menu-fixed">
           <dir class="menu-tags">
@@ -20,7 +20,7 @@
     
               <a class="menu-links" id="btnLogin" href="#">Log in</a>
               <a class="menu-links" id="btnLogin" href="#">Help</a>
-
+              <a href="#0" class="cd-nav-trigger" id="toggle-menu">Menu<span></span></a>
           </dir>
         </div>
       </header>
