Avance de animaciones en el front-end index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="#" class="btn-registro-banner">Registrate</a>
             </div>
           <article class="col-index" id="columna1">
-            <img src="img/banners/index-banner-3.svg" class="banner-img" alt="">
+            <img id="banner-img-index" src="img/banners/index-banner-3.svg" class="banner-img" alt="">
           </article>
           
           <div class="div-father">
@@ -60,7 +60,7 @@
                 <a href="#" class="btn-registro-banner">Registrate</a>
             </div>
           <article class="col-index transparent" id="columna1">
-            <img src="img/banners/index-banner-4.svg" class="banner-img" alt="">
+            <img id="banner-img-index-down" src="img/banners/index-banner-4.svg" class="banner-img" alt="">
           </article>
         </div>
 
