Resolviendo parte de la usabilidad de Nielsen

--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
           <div class="div-father">
           
            <div class="div-title-banner right">
-              <p class="p-title-banner"><a href="#" class="title-banner">Work Cloud</a></p>
-              <p class="p-subtitle-banner"><b>¿Que es Work Cloud?</b></p>
-              <p class="p-subtitle-banner">Work Cloud es una red social para empresas 
-              <br>de software con el fin de compartir sus proyectos,<br>
-               dudas, aclaraciones, etc. <br>
-              </p>
-              <p class="p-subtitle-banner">Con el resultado de establecer una mejor conversaciòn<br>
-                con todo el personal y obtener mejores resultados<br>
-                para la empresa y sus trabajadores.
+              <p class="p-title-banner"><a href="#" class="title-banner">Utilidad</a></p>
+              <p class="p-subtitle-banner"><b>¿Por qué utilizar Work Cloud?</b></p>
+              <p class="p-subtitle-banner">Work Cloud es la una tendencia para las empresas 
+              <br>Ya que esta mejora el rendimiento y la comunicación entre<br>
+              los trabajadores en el área de software como por ejemplo DevOps,<br>diseñadores, programadores, etc.</p>
+              <p class="p-subtitle-banner"><br>
+                con la diferencia de utilizar otra red social esta misma maneja <br>
+                herramientas especiales para la comunicación. 
                 </p>
-                <a href="#" class="btn-registro-banner">Registrate</a>
+                <a href="#" class="btn-registro-banner">Saber mas</a>
             </div>
           <article class="col-index transparent" id="columna1">
             <img id="banner-img-index-down" src="img/banners/index-banner-4.svg" class="banner-img" alt="">
@@ -66,21 +65,21 @@
 
 
           <article class="card" id="columna2">
-            <p class="card-title"><b>Data Management</b></p>
+            <p class="card-title"><b>Rendimiento en el trabajo</b></p>
             <img class="img-card-index" src="img/svg-cards/process.svg" alt="">
             <p class="p-card-index">G.I. Joe taught us that knowing is half the battle; in the theater of big data, 
               storage and retrieval are the other half — especially on the web.</p>
           </article>
 
           <article class="card" id="columna3">
-              <p class="card-title"><b>Interactive Visualization</b></p>
+              <p class="card-title"><b>Ejecucion de tareas</b></p>
               <img class="img-card-index" src="img/svg-cards/edit.svg" alt="">
               <p class="p-card-index">As devices and browsers advance at a feverish pace,
                  so does our ability to serve rich, interactive visuals. Working alongside the domain expertise of our clients, we seek to uncover the best representations of their data.</p>
           </article>
 
           <article class="card" id="columna3">
-              <p class="card-title"><b>Technical Training</b></p>
+              <p class="card-title"><b>Almacenamiento</b></p>
               <img class="img-card-index" src="img/svg-cards/grafics.svg" alt="">
               <p class="p-card-index">With Code School, we excelled as an early entry in the learn-to-code
                  marketplace. Since then, we’ve consulted on and implemented platforms for education in 
@@ -89,7 +88,7 @@
           </article>
 
           <article class="card" id="columna3">
-              <p class="card-title"><b>Software Process</b></p>
+              <p class="card-title"><b>Progreso rápido</b></p>
               <img class="img-card-index" src="img/svg-cards/pay.svg" alt="">
               <p class="p-card-index">From startups to Fortune 100 companies, we’ve run the gamut of client 
                 size and structure. Our process and experience combine to sidestep the usual pitfalls of
@@ -98,7 +97,7 @@
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Design and Development</b></p>
-              <img class="img-card-index" src="img/svg-cards/process.svg" alt="">
+              <img class="img-card-index" src="img/svg-cards/all personal.svg" alt="">
               <p class="p-card-index">Our software development experience 
                 goes beyond a sum of years spent: we’ve had a hand in training many of
                  today’s web developers, and always seek to push the bar of quality higher.</p>
@@ -106,7 +105,7 @@
 
 
           <article class="card" id="columna3">
-              <p class="card-title"><b>Data Management</b></p>
+              <p class="card-title"><b>Soporte</b></p>
               <img class="img-card-index" src="img/svg-cards/grafics.svg  " alt="">
               <p class="p-card-index">G.I. Joe taught us that knowing is half the battle; in the theater of big data, 
                 storage and retrieval are the other half — especially on the web.</p>
