Avance de Usabilidad agregando 404 y help terminado front-end

--- a/404-error.html
+++ b/404-error.html
@@ -7,7 +7,7 @@
          <link rel="shortcut icon" href="img/ico/work-cloud-logo.ico" type="image/x-icon">
          <meta name="viewport" content="width=device-width,user-scalable=no">
     </head>
-    <body id="body-help">
+    <body>
       <header>
         <div id="menu-fixed" class="menu-fixed">
           <dir class="menu-tags">
@@ -25,13 +25,9 @@
       </header>
 
       <div id="wrapper">
-        <form action="">
-          <p class="imput-help p-help">¿Cómo puede ayudarte?</p>
-          <input type="text" class="imput-help">
-          <button type="submit" class="searchButton"><i class="fa fa-search"></i></button>
-        </form>    
         <div class="col-index transparent">
-                <img id="banner-img-index" src="img/banners/help-banner.svg" class="banner-img" alt="">
+                <img id="banner-img-index" src="img/404-error.svg" class="banner-img" alt="">
+                <a href="#" class="btn-registro-banner center-absolute">Home</a>
         </div> 
       </div>
     
