--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
          <meta charset="utf-8">
          <title>Work Cloud</title>
          <link href="css/style-index.css" type="text/css" rel="stylesheet">
-         <link rel="shortcut icon" href="img/work-cloud-logo.svg" type="image/x-icon">
+         <link rel="shortcut icon" href="img/ico/work-cloud-logo.ico" type="image/x-icon">
          <meta name="viewport" content="width=device-width,user-scalable=no">
     </head>
     <body class="cuerpo">
-      <div class="alert">404</div>
+     
       <header>
         <div id="menu-fixed" class="menu-fixed">
           <dir class="menu-tags">
               <img class="menu-links logo-nav" src="img/work-cloud-logo.svg" alt="">
 
-              <a class="menu-links" href="#">Home</a>
+              <a class="menu-links" href="index.html">Home</a>
               <a class="menu-links" href="#">Abaout</a>
               <a class="menu-links" href="#">Documentation</a>
     
