Avance de pruebas de UX

--- a/404-error.html
+++ b/404-error.html
@@ -25,9 +25,11 @@
       </header>
 
       <div id="wrapper">
+      
+          <p class="imput-help p-help" id="p-opss">Opss! pagina en contrucción :(</p>
+
         <div class="col-index transparent">
-                <img id="banner-img-index" src="img/404-error.svg" class="banner-img" alt="">
-                <a href="#" class="btn-registro-banner center-absolute">Home</a>
+                <img src="img/404-error.svg" class="banner-img" alt="">
         </div> 
       </div>
     
