--- a/index.html
+++ b/index.html
@@ -67,58 +67,73 @@
           <article class="card" id="columna2">
             <p class="card-title"><b>Rendimiento en el trabajo</b></p>
             <img class="img-card-index" src="img/svg-cards/process.svg" alt="">
-            <p class="p-card-index">G.I. Joe taught us that knowing is half the battle; in the theater of big data, 
-              storage and retrieval are the other half — especially on the web.</p>
+            <p class="p-card-index">Supervisar el progreso.
+              identificar los pasos para cumplir el objetivo
+              evaluar que tanto congenia en las tareas
+              reconocer el exito de cada uno 
+              evaluar si posee el tamano adecuado
+              sea adaptable a cada proyecto
+              cuente con los recursos adecuados
+            </p>
           </article>
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Ejecucion de tareas</b></p>
               <img class="img-card-index" src="img/svg-cards/edit.svg" alt="">
-              <p class="p-card-index">As devices and browsers advance at a feverish pace,
-                 so does our ability to serve rich, interactive visuals. Working alongside the domain expertise of our clients, we seek to uncover the best representations of their data.</p>
+              <p class="p-card-index">
+                Desglose de tareas
+                verificación de que las tareas cumplan con los objetivos propuestos
+                ordenamiento de tareas 
+                fijar tiempos de ejecución
+                definicion de los responsables de las tareas o grupo de ellas
+                estimacion de costos de ejecución
+              </p>
           </article>
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Almacenamiento</b></p>
               <img class="img-card-index" src="img/svg-cards/grafics.svg" alt="">
-              <p class="p-card-index">With Code School, we excelled as an early entry in the learn-to-code
-                 marketplace. Since then, we’ve consulted on and implemented platforms for education in 
-                 data science, network administration, and more.
+              <p class="p-card-index">Cada usuario tendra 15 GB de almacenamiento libre para cumplir con sus responsabilidades en el sistema, el cuál se podra usar de manera libre y sencilla con facil uso.
                 </p>
           </article>
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Progreso rápido</b></p>
               <img class="img-card-index" src="img/svg-cards/pay.svg" alt="">
-              <p class="p-card-index">From startups to Fortune 100 companies, we’ve run the gamut of client 
-                size and structure. Our process and experience combine to sidestep the usual pitfalls of
-                 software development.</p>
+              <p class="p-card-index">Todos los empleados tiene la oportunidad de avanzar y realizar de una manera más eficaz
+                 las tareas asignadas a cada uno de ellos.</p>
           </article>
 
           <article class="card" id="columna3">
-              <p class="card-title"><b>Design and Development</b></p>
+              <p class="card-title"><b>Diseño y Usabilidad</b></p>
               <img class="img-card-index" src="img/svg-cards/all personal.svg" alt="">
-              <p class="p-card-index">Our software development experience 
-                goes beyond a sum of years spent: we’ve had a hand in training many of
-                 today’s web developers, and always seek to push the bar of quality higher.</p>
+              <p class="p-card-index">Nos enfocamos en un diseño mas minimalista para los usuarios 
+                con una interface mas interactiva para tener una mejor experiencia interactiva
+              </p>
           </article>
 
 
           <article class="card" id="columna3">
               <p class="card-title"><b>Soporte</b></p>
               <img class="img-card-index" src="img/svg-cards/grafics.svg  " alt="">
-              <p class="p-card-index">G.I. Joe taught us that knowing is half the battle; in the theater of big data, 
-                storage and retrieval are the other half — especially on the web.</p>
+              <p class="p-card-index">Se le brindará soporte a los usuarios  que permanezcan y usen 
+                la aplicación de manera continua, evitando que e estos tengan problemas y de ser asi, 
+                sean solucionados de manera inmediata.</p>
           </article>
 
-
+          
         
 
         </section>
       </div>
       <footer>
           <article class="footer">
+              <div onLoad="mostrar_hora()">   
+                  <div id="fecha">
 
+                      <span id="meses"></span> meses,<span id="dias"></span> dias, <span id="hora"></span> horas, <span id="minuto"></span> minutos,  <span id="segundo"></span> segundos
+                  </div>  
+                </div>
           </article>
       </footer>
       <script src="js/front-index.js"></script>
